dashboard/k8s/ingress_kubernetes-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: dashboard.k8s.datashades.links.com.au
    http:
      paths:
      - path: "/"
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
